--- a/pagestyle.css
+++ b/pagestyle.css
@@ -85,7 +85,7 @@ a:active {color:#FFA04D;text-decoration:none;}    /* link selecionado */
   font-size:25px;
   margin-top:15px;
   margin-bottom:40px; /* [v2.2]6 */
-  font-family: 'Lobster Two', TNTT3D, audimatRegular, "Lucida Console";
+  font-family: "Lobster Two", TNTT3D, audimatRegular, "Lucida Console";
 }
 
 #validade_argumento{
